# geo_public

./: .gitignore  README.md  requirements.txt  run_demo.sh
.github/workflows/: release.yml
archive/: worldmap.html
containerized_host/: CMakeLists.txt  Dockerfile  README.md  dev_host.py  host.py  tiny_ptx  tiny_ptx.c
containerized_host/tests/: low_level_cuda_timings  low_level_cuda_timings.c  run_tiny_ptx.py  test_cuda  test_cuda.c
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  WorldMap.tsx
host/: .dockerignore  Dockerfile  old_host.py  requirements.txt  run_host.sh  wsgi.py
host/docs/: docker.md
landmark/: generate_keys.py  key_manager.py  landmark.py  landmark_registry.json  old_landmarks.json  signature_checker.py
landmark/keys/127.0.0.1:5001/: private_key.pem  public_key.pem
landmark/keys/127.0.0.1:5003/: private_key.pem  public_key.pem
landmark/keys/sc1:5002/: private_key.pem  public_key.pem
policies/: tiny.json
scripts/: check_cc_ppcie_status.py
